Details
-
Bug
-
Status: Closed (View Workflow)
-
Minor
-
Resolution: Fixed
-
10.11
-
None
-
Not for Release Notes
Description
|
10.11 |
Aborting translation of method 'BINCOL::SetEndian' in file 'storage/connect/tabfix.cpp'37% 3min28s
|
Known incorrect assumption in the frontend: Got both empty clang_name and None for param_idx in get_var_name_mangled ({"name":"","qual_name":[""]}) ({"init_expr":<"CXXConstructExpr":({"pointer":38326,"source_range":({"file":"/mnt/src/storage/connect/tabfix.cpp","line":455,"column":3},{"file":"/mnt/src/storage/connect/tabfix.cpp","line":455,"column":3})},[],{"qual_type":{"type_ptr":38327}},{"decl_ref":{"kind":<"CXXConstructor">,"decl_pointer":38328,"name":{"name":"(anonymous union at /mnt/src/storage/connect/tabfix.cpp:455:3)","qual_name":["(anonymous union at /mnt/src/storage/connect/tabfix.cpp:455:3)","anonymous_union_/mnt/src/storage/connect/tabfix.cpp:455:3","SetEndian","BINCOL"]},"qual_type":{"type_ptr":1166}}})>})
|
Aborting translation of method 'TDBXIN::GetRecpos' in file 'storage/connect/tabsys.cpp'38% 3min30s
|
Known incorrect assumption in the frontend: Got both empty clang_name and None for param_idx in get_var_name_mangled ({"name":"","qual_name":[""]}) ({"init_expr":<"CXXConstructExpr":({"pointer":38331,"source_range":({"file":"/mnt/src/storage/connect/tabsys.cpp","line":633,"column":3},{"file":"/mnt/src/storage/connect/tabsys.cpp","line":633,"column":3})},[],{"qual_type":{"type_ptr":38332}},{"decl_ref":{"kind":<"CXXConstructor">,"decl_pointer":38333,"name":{"name":"(anonymous union at /mnt/src/storage/connect/tabsys.cpp:633:3)","qual_name":["(anonymous union at /mnt/src/storage/connect/tabsys.cpp:633:3)","anonymous_union_/mnt/src/storage/connect/tabsys.cpp:633:3","GetRecpos","TDBXIN"]},"qual_type":{"type_ptr":135}}})>})
|
Aborting translation of method 'TDBXIN::SetRecpos' in file 'storage/connect/tabsys.cpp'
|
Known incorrect assumption in the frontend: Got both empty clang_name and None for param_idx in get_var_name_mangled ({"name":"","qual_name":[""]}) ({"init_expr":<"CXXConstructExpr":({"pointer":38392,"source_range":({"file":"/mnt/src/storage/connect/tabsys.cpp","line":648,"column":3},{"file":"/mnt/src/storage/connect/tabsys.cpp","line":648,"column":3})},[],{"qual_type":{"type_ptr":38393}},{"decl_ref":{"kind":<"CXXConstructor">,"decl_pointer":38394,"name":{"name":"(anonymous union at /mnt/src/storage/connect/tabsys.cpp:648:3)","qual_name":["(anonymous union at /mnt/src/storage/connect/tabsys.cpp:648:3)","anonymous_union_/mnt/src/storage/connect/tabsys.cpp:648:3","SetRecpos","TDBXIN"]},"qual_type":{"type_ptr":135}}})>})
|
Aborting translation of method 'TDBXML::ReadDB' in file 'storage/connect/tabxml.cpp'.] 38% 3min33s
|
Known incorrect assumption in the frontend: Got both empty clang_name and None for param_idx in get_var_name_mangled ({"name":"","qual_name":[""]}) ({"init_expr":<"CXXConstructExpr":({"pointer":53854,"source_range":({"file":"/mnt/src/storage/connect/tabxml.cpp","line":1210,"column":5},{"file":"/mnt/src/storage/connect/tabxml.cpp","line":1210,"column":5})},[],{"qual_type":{"type_ptr":53855}},{"decl_ref":{"kind":<"CXXConstructor">,"decl_pointer":53856,"name":{"name":"(anonymous union at /mnt/src/storage/connect/tabxml.cpp:1210:5)","qual_name":["(anonymous union at /mnt/src/storage/connect/tabxml.cpp:1210:5)","anonymous_union_/mnt/src/storage/connect/tabxml.cpp:1210:5","ReadDB","TDBXML"]},"qual_type":{"type_ptr":135}}})>})
|
Aborting translation of method 'TDBXML::GetRecpos' in file 'storage/connect/tabxml.cpp'
|
Known incorrect assumption in the frontend: Got both empty clang_name and None for param_idx in get_var_name_mangled ({"name":"","qual_name":[""]}) ({"init_expr":<"CXXConstructExpr":({"pointer":53614,"source_range":({"file":"/mnt/src/storage/connect/tabxml.cpp","line":1131,"column":3},{"file":"/mnt/src/storage/connect/tabxml.cpp","line":1131,"column":3})},[],{"qual_type":{"type_ptr":53615}},{"decl_ref":{"kind":<"CXXConstructor">,"decl_pointer":53616,"name":{"name":"(anonymous union at /mnt/src/storage/connect/tabxml.cpp:1131:3)","qual_name":["(anonymous union at /mnt/src/storage/connect/tabxml.cpp:1131:3)","anonymous_union_/mnt/src/storage/connect/tabxml.cpp:1131:3","GetRecpos","TDBXML"]},"qual_type":{"type_ptr":135}}})>})
|
Aborting translation of method 'TDBXML::ReadDB' in file 'storage/connect/tabxml.cpp'
|
Known incorrect assumption in the frontend: Got both empty clang_name and None for param_idx in get_var_name_mangled ({"name":"","qual_name":[""]}) ({"init_expr":<"CXXConstructExpr":({"pointer":53854,"source_range":({"file":"/mnt/src/storage/connect/tabxml.cpp","line":1210,"column":5},{"file":"/mnt/src/storage/connect/tabxml.cpp","line":1210,"column":5})},[],{"qual_type":{"type_ptr":53855}},{"decl_ref":{"kind":<"CXXConstructor">,"decl_pointer":53856,"name":{"name":"(anonymous union at /mnt/src/storage/connect/tabxml.cpp:1210:5)","qual_name":["(anonymous union at /mnt/src/storage/connect/tabxml.cpp:1210:5)","anonymous_union_/mnt/src/storage/connect/tabxml.cpp:1210:5","ReadDB","TDBXML"]},"qual_type":{"type_ptr":135}}})>})
|
|
connect/tabfix.cpp +455 |
void BINCOL::SetEndian(void)
|
{
|
union {
|
short S;
|
char C[sizeof(short)];
|
};
|
|
S = 1;
|
Endian = (C[0] == 1) ? 'L' : 'B';
|
} // end of SetEndian
|
Could be a compile time initialisation.
|
storage/connect/tabsys.cpp +633 |
int TDBXIN::GetRecpos(void)
|
Trivial anon-union that could be given a name.
Infer is just ignoring these.
Attachments
Issue Links
- relates to
-
MDBF-143 Implement static analysis with Infer
-
- Open
-