MDEV-37613 Connect Storage Engine - remove anonymous union

BINCOL::SetEndian can be replaced by using the preprocessor
macro WORDS_BIGENDIAN to determine the endian. After that
the BINCOL::Endian can be declared const.

For other functions, just gave the union a name.
This was to avoid errors in Infer.